[metadata]
author = Resilience Team
author_email = ychaos-dev@verizonmedia.com
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: Security
	Topic :: Scientific/Engineering
	Topic :: System :: Benchmark
description = Python module ychaos
keywords = ychaos, testing, resilience, chaos, engineering
long_description = file:README.md
long_description_content_type = text/markdown
name = ychaos
project_urls = 
	Documentation =  https://yahoo.github.io/ychaos
	Source = https://github.com/yahoo/ychaos
	Changelog = https://yahoo.github.io/ychaos/releases/
	CI Pipeline =  https://cd.screwdriver.cd/pipelines/7419
	Download = https://pypi.org/project/ychaos/#files
url = https://github.com/yahoo/ychaos
version = 0.2.733388

[options]
namespace_packages = 
	ychaos
packages = find_namespace:
package_dir = 
	=src
install_requires = 
	pydantic==1.8.2
	pyyaml==5.4.1
	requests==2.26.0
	rich==10.9.0
python_requires = >="3.6"

[options.extras_require]
chaos = 
	ansible==3.2.0
agents = 
	psutil==5.8.0
	pyOpenSSL==20.0.1
test = 
	mockito
	jsondiff
	
	cryptography
	
	ansible==3.2.0
	
	psutil==5.8.0
	pyOpenSSL==20.0.1
	
	pytest-timeout
	parameterized
doc_build = 
	mkdocs
	mkdocs-material>=7.0.0
	mkdocstrings
	mkdocs-awesome-pages-plugin
	markdown-include
	
	json_schema_for_humans
	
	
	psutil==5.8.0
	pyOpenSSL==20.0.1
	
	livereload
mypy = 
	mypy
	types-PyYAML
	types-requests
	types-setuptools
pep8 = 
	black
	flake8
	codespell
pylint = 
debug = 
	mkdocs
	mkdocs-material>=7.0.0
	mkdocstrings
	mkdocs-awesome-pages-plugin
	json-schema-for-humans
	markdown-include
	
	flake8
	bandit
	pre-commit
	codespell
	
	mypy
	types-PyYAML
	types-requests
	types-setuptools
	
	pytest
	pytest-cov
	pytest-timeout
	pytest-xdist
	mockito
	callee
	parameterized
	jsondiff
	
	isort
	black
	absolufy-imports
	
	
	ansible==3.2.0
	
	psutil==5.8.0
	pyOpenSSL==20.0.1

[options.entry_points]
console_scripts = 
	ychaos=ychaos.cli.main:main

[options.packages.find]
where = src

[screwdrivercd.version]
version_type = sdv4_SD_BUILD

[flake8]
ignore = E501,F841,W503, E203
max-complexity = 15

[tool:pytest]
addopts = --no-cov-on-fail --cov-report=html:artifacts/coverage
filterwarnings = 
	ignore::UserWarning
console_output_style = count
timeout = 5

[coverage:run]
source = ychaos
branch = True
concurrency = 
	thread
	multiprocessing
omit = 
	src/ychaos/cli/mock.py

[coverage:report]
precision = 2
fail_under = 95
exclude_lines = 
	pragma: no cover
	raise NotImplementedError
	if TYPE_CHECKING:
	@overload
	pass

