[metadata]
author = Resilience Team
author_email = ychaos-dev@yahooinc.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: Security
    Topic :: Scientific/Engineering
    Topic :: System :: Benchmark
description = Python module ychaos
keywords = ychaos, testing, resilience, chaos, engineering
long_description = file:README.md
long_description_content_type = text/markdown
name = ychaos
project_urls =
    Documentation =  https://yahoo.github.io/ychaos
    Source = https://github.com/yahoo/ychaos
    Changelog = https://yahoo.github.io/ychaos/releases/
    CI Pipeline =  https://cd.screwdriver.cd/pipelines/7419
    Download = https://pypi.org/project/ychaos/#files
url = https://github.com/yahoo/ychaos
version = 0.5.0

packages = find_namespace:

package_dir =
	=src

[options]
install_requires =
    pydantic==1.9.0
    pyyaml==6.0
    requests==2.27.1
    rich==12.4.1

# By default new packages require at minimum the current supported Python release.
python_requires = >=3.7

[options.extras_require]
# Managing Optional Dependencies

# Package dependencies are pinned to a specific version so as to avoid
# any broken releases. The versions that are pinned here are stable versions
# and the ychaos tool is working as expected.

# To update the version, test the tool with the new dependencies
# and raise a commit
chaos =
    ansible==3.2.0

agents =
    psutil==5.9.0
    pyOpenSSL==22.1.0

all =
    ansible==3.2.0
    psutil==5.9.0
    pyOpenSSL==22.1.0

# Additional packages for testing (test step)
test =
    mockito
    jsondiff
    coverage<6.0

    cryptography

    # Optional Dependencies (pinned)
    # chaos
    ansible==3.2.0

    #agents
    psutil==5.9.0
    pyOpenSSL==22.1.0

    pytest-timeout
    parameterized

# Additonal packages needed for documentation generation (doc_build/doc_publish steps)
doc_build =
    mkdocs
    mkdocs-material>=7.0.0
    mkdocstrings
    mkdocs-awesome-pages-plugin
    markdown-include

    json_schema_for_humans

    # Optional Dependencies (pinned)

    #agents
    psutil==5.9.0
    pyOpenSSL==22.1.0

    # https://github.com/mkdocstrings/mkdocstrings/issues/295
    livereload

# Additional packages needed for mypy type checking
mypy =
    mypy
    types-PyYAML
    types-requests
    types-setuptools

# Additional packages needed for pep8/pycodestyle style checking
pep8 =
    black
    flake8
    codespell

# Additional packages needed for pylint code analysis
pylint =

# Debug indicates the requirements that are needed to develop
# this tool on your local machine.
debug =
    # Documentation
    mkdocs
    mkdocs-material>=7.0.0
    mkdocstrings
    mkdocs-awesome-pages-plugin
    json-schema-for-humans
    markdown-include

    # Code Analysis
    flake8
    bandit
    pre-commit
    codespell

    # Type Analysis
    mypy
    types-PyYAML
    types-requests
    types-setuptools

    # Unittest
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
    mockito
    callee
    parameterized
    jsondiff
    coverage<6.0

    # Code Formatting
    isort
    black
    absolufy-imports

    # Optional Dependencies (Pinned)

    # chaos
    ansible==3.2.0

    # agents
    psutil==5.9.0
    pyOpenSSL==22.1.0


[options.entry_points]
# Console script entry points are used to create wrapper scripts that run a specific function, the resulting wrapper
# is installed in the bin directory.

console_scripts =
    ychaos=ychaos.cli.main:main

[options.packages.find]
where=src

[screwdrivercd.version]
# Base the autoversion build number on the screwdriver build number
version_type = sdv4_SD_BUILD

[flake8]
ignore = E501,F841,W503, E203
max-complexity = 15

[tool:pytest]
addopts = --no-cov-on-fail --cov-report=html:artifacts/coverage
filterwarnings =
    ignore::UserWarning
console_output_style = count
timeout=5

[coverage:run]
source = ychaos
branch = True
concurrency =
    thread
    multiprocessing
omit =
    src/ychaos/cli/mock.py

[coverage:report]
precision = 2
fail_under = 95
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
    pass
